kadu (0.6.6-beta11-1) experimental; urgency=low

  * New upstream release
  * Removed oxygen16 in favor of oxygen icon theme
  * Moved usr/share/kadu/syntax from kadu-external-modules to kadu-common
  * Updated debian/patches/01-no_autodownload.patch to make it fit
    0.6.6-beta11

 -- Patryk Cisek <patryk@debian.org>  Thu, 25 Nov 2010 08:19:07 +0100

kadu (0.6.6-beta9-1) experimental; urgency=low

  * New upstream release
  * Added dependency on libqt4-sql-sqlite for kadu package to make history
    module work properly
  * Removed dbus module for now. It's broken on 0.6.6.
  * Updated Kadu Team members list in debian/copyright
  * Added mime_tex and cenzor modules, since they've been ported to new
    0.6.6 API
  * Removed 05-mpris_mediaplayer_0.6.6_fix.patch and
    06-word_fix_0.6.6_fix.patch from debian/patches. These fixes have been
    applied upstream.
  * Added debian/patches/05-icons_absolute_paths_fix.patch -- backported
    fix from recent git's master branch. Allowes mime_tex module to
    properly display it's icon in chat window.
  * Update of clean target in debian/rules: debian/alsa-stamp gets
    removed as well

 -- Patryk Cisek <patryk@debian.org>  Fri, 29 Oct 2010 18:41:21 +0000

kadu (0.6.6-beta8-1) experimental; urgency=low

  * New upstream release
  * Bumped Standards-Version

 -- Patryk Cisek <patryk@debian.org>  Sun, 24 Oct 2010 11:25:06 +0000

kadu (0.6.5.4.ds1-1) unstable; urgency=low

  * Added missing copyright notices about dbus and pajacyk modules to
    debian/copyright
  * Updated year ranges in debian/copyright from ...-2009 to ...-2010
  * Standards-Version to 3.8.4
  * Migrated to 3.0 (quilt) format
  * Set fake 0.6.5.4.ds1 version to simulate new upstream release.

 -- Patryk Cisek <patryk@debian.org>  Sun, 20 Jun 2010 12:00:02 +0000

kadu (0.6.5.4-1) unstable; urgency=low

  * New upstream release
  * Refreshed patches in debian/patches to code changes since last stable
    release of Kadu