@@ -1,8 +1,8 @@
 diff --git a/kadu-core/gui/windows/about.cpp b/kadu-core/gui/windows/about.cpp
-index f8ae1e0..a5885d1 100644
+index 6229559..c1a63f6 100644
 --- a/kadu-core/gui/windows/about.cpp
 +++ b/kadu-core/gui/windows/about.cpp
-@@ -143,7 +143,7 @@ About::About(QWidget *parent) :
+@@ -147,7 +147,7 @@ About::About(QWidget *parent) :
  	tb_changelog->setFrameStyle(QFrame::NoFrame);
  	tb_changelog->setWordWrapMode(QTextOption::NoWrap);
  	tb_changelog->viewport()->setAutoFillBackground(false);
@@ -11,7 +11,7 @@ index f8ae1e0..a5885d1 100644
  
  	// add tabs
  	tw_about->addTab(wb_about, tr("&About"));
-@@ -202,7 +202,10 @@ QString About::loadFile(const QString &name)
+@@ -206,7 +206,10 @@ QString About::loadFile(const QString &name)
  {
  	kdebugf();
  
